# polymonitor

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  config.example.yaml  pyproject.toml
.github/workflows/: docker.yml
src/: config.py  config_manager.py  main.py  notifier.py  state.py  web.py
src/monitors/: account_tracker.py  position_changes.py  price_monitor.py
src/polymarket/: client.py  models.py
